# adventurer

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PROJECT.md  README.md  SDL_RENDERING_ISSUES.md  fpsfix.txt  game_settings.json
graphics/: ProceduralArt.cpp  ProceduralArt.h
graphics/Biomes/: BiomeBase.h  Desert.cpp  Desert.h  Forest.cpp  Forest.h  Grassland.cpp  Grassland.h  Indoor.cpp  Indoor.h
graphics/Characters/: CharacterSprites.cpp  CharacterSprites.h
graphics/Core/: PixelUtils.cpp  PixelUtils.h  TextureCache.cpp  TextureCache.h
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  main.cpp
tools/: generate_clothing.py  generate_clothing2.py  generate_detailed.py  generate_human.py  generate_human2.py  generate_link_sprite  generate_link_sprite.cpp  generate_sprite.py  generate_sprite2.py  generate_sprite3.py  generate_walk_cycle.py  mingw-toolchain.cmake
utils/: Constants.h  MathUtils.h  Settings.cpp  Settings.h  Timer.h
world/: TileMap.cpp  TileMap.h  TileTypes.h  WorldManager.cpp  WorldManager.h
